--- a/gamedev.html
+++ b/gamedev.html
@@ -99,6 +99,70 @@
 
 
 
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2>Testing Unity's music synchronicity, while practicing Unity 2D platformer development.
+							</h2>
+							<p>TAGS: software; Unity; programming; audio; Maschine </p>
+						</header>
+
+						<h3>Why I Did This</h3>
+						<p>I find it creative in games when a music track evolves / shifts over a game to create this effect of
+							nostalgia but also the pleasure of hearing a new version. I think it can work well with
+							setting moods for
+							scenes (like if the environment was like: a calm forest, an empty desert, snowy blizzard,
+							etc.); it also works wells
+							with boss fights to change the intensity.<br><br>
+
+							I can switch tracks on cue using generic scipting cues, but I wanted to see how well Unity
+							does at playing multiple songs in a synchronized fashion so
+							then when I switch zones (like entering a cave), the music switches but keeps its same
+							sequence location (much like
+							a tune changing its instruments while it's playing). At the same time, I wanted to practice
+							2D platformer game development, to see if its tilemap editing is as easy as top-down 2D
+							development.<br><br>
+
+							This is a demo video of me going on a platformer scene, with background music pieces (that I
+							made
+							in Maschine) switching as I switch between zones:
+						</p>
+
+						<div style="position: relative; overflow: hidden; padding-bottom: 56.25%;">
+							<iframe id="ytplayer" type="text/html"
+								src="https://www.youtube.com/embed/tF09YT8w0XI?&mute=1" frameborder="0"
+								style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" allowfullscreen>
+							</iframe>
+						</div>
+
+						<h3>Lessons Learned</h3>
+						The music synchronizes very well. The first zone gives me this feeling of being in a barren
+						wasteland, while the second zone feel reminiscent of 'cave' levels (with retro techno-ey
+						tunes). However, some instruments are noticeably jarring as they switch,
+						so I should try making tracks that keep some common instruments (like bass) as they switch, so
+						the tunes transition better.<br>
+						I should try this with boss fights, where the music changes to more intense versions of
+						itself.<br>
+						The 2D platformer editor is pretty much the same as top-down, it's just you have the perspective
+						of side-scrolling; very straight forward.
+						</p>
+
+						<h3>References</h3>
+						<p>Unity's 2D platformer template/tutorial:
+							https://learn.unity.com/project/2d-platformer-template <br>
+							Maschine DAW software:
+							https://www.native-instruments.com/en/products/maschine/production-systems/maschine/
+
+							
+						</p>
+
+					</article>
+
 
 					<!-- Article//// -->
 					<!-- CTA -->
@@ -156,12 +220,10 @@
 
 						<h3>References</h3>
 						<p>Unity's Tanks project: https://learn.unity.com/project/tanks-tutorial?uv=5.x <br>
-							Unity Play, Tanks game:
-							https://play.unity.com/mg/other/tanks-shooter-but-against-computer-tanks
+
 						</p>
 
 					</article>
-
 
 					<!-- Article//// -->
 					<!-- CTA -->
@@ -391,7 +453,7 @@
 							there. It was free, self paced, and could have increased my skill profile, so it seemed
 							worthwhile to explore.<br>
 
-							In the program I was tasked to:
+							In the program I was tasked to:<br>
 							- Create a new feature for the ‘Sims 4’ game and present it in the form of a written
 							proposal. (I went with an Aeroponics tower item for the Sims garden area).<br>
 							- Develop a UML class diagram of the object-oriented layout of the previously mentioned
