--- a/gamedev.html
+++ b/gamedev.html
@@ -189,7 +189,7 @@
 							canvas with keyboard controls), win/lose triggers.<br><br>
 
 							This is a demo video of me going through the level (I let the SFX go for a bit to demo the
-							tanks and explosions, but then I mute it and let my music play):
+							tanks and explosions, but then I mute it and let my created music play):
 						</p>
 
 						<div style="position: relative; overflow: hidden; padding-bottom: 56.25%;">
@@ -527,10 +527,10 @@
 						</div>
 
 						<h3>Lessons Learned</h3>
-						As said before, this can be unnecessary for simple games, but it also show just how little a
-						scripting effort is needed to make higher quality scenes.<br>I imagine putting these algorithmic
+						As said before, this can be unnecessary for simple games, but it also shows just how a little
+						scripting effort can make higher quality scenes.<br>I imagine putting these algorithmic
 						techniques on enemies so that when I hit them with different force intensities, they can react
-						with different moan/hurt intensities (all without individually assigning noises to individual
+						with different moan/hurt intensities (all without individually assigning various noises to individual
 						enemies).
 						</p>
 
