--- a/gamedev.html
+++ b/gamedev.html
@@ -813,7 +813,7 @@
 							<a href="https://www.youtube.com/watch?v=5aArtjM2tWk"
 								target="_blank">https://www.youtube.com/watch?v=5aArtjM2tWk</a> <br>
 
-							Another version (I tired to stabilize the shakiness of the first video, but it made other
+							Another version (I tried to stabilize the shakiness of the first video, but it made other
 							items shaky):<br>
 							<a href="https://youtu.be/g37nufiZfr4" target="_blank">https://youtu.be/g37nufiZfr4</a>
 						</p>
