--- a/archived.html
+++ b/archived.html
@@ -810,6 +810,33 @@
 								alt="" /></span>
 					</article>
 
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="Touring-Scotford-Solar-Farm.html">Touring Scotford Solar Farm, Canada's largest "behind the meter" solar project.</a></h2>
+							<p>TAGS: nature projects; solar; renewable energy design </p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>I'm a member of the UofA student club Renewable Energy Design (RED), and we were invited by
+							the Women In Renewable Energey (WIRE) organization to
+							tour the Scotford Solar Farm. It was a great opportunity to see a large scale solar farm,
+							especially one that is considered the largest "behind the meter" project in Canada; "Behind
+							the meter" means that all the generated power goes directly to the Shell Scotford industrial
+							site (no grid supplying). Aside from getting the opportunity to see a giant ~58MW solar farm
+							(which I
+							have not done before), it was also an opportunity to see what challenges and solutions were
+							present for such a unique project.</p>
+						</p>
+
+						<span class="image featured"><img
+								src="articleAssets\Touring-Scotford-Solar-Farm\solar-panels-cbc.jpg" alt="" /></span>
+								
+					</article>
 
 
 				</div>
