--- a/Touring-Scotford-Solar-Farm.html
+++ b/Touring-Scotford-Solar-Farm.html
@@ -90,7 +90,7 @@
 							supplement the panels during that lower sun season.<br>
 							- The system has an AI that can detect when the panels are filled with dust or snow,
 							indicating of such need for maintenance.<br>
-							- The system has numerous solar radiation detectors (they look like clear hlaf-spheres) that
+							- The system has numerous solar radiation detectors (they look like clear half-spheres) that
 							read the intensity of the sun pointing both down to Earth and up from the ground (for the reflection intensity).
 						</p>
 
