--- a/archived.html
+++ b/archived.html
@@ -818,7 +818,8 @@
 					</section>
 					<article>
 						<header>
-							<h2><a href="Touring-Scotford-Solar-Farm.html">Touring Scotford Solar Farm, Canada's largest "behind the meter" solar project.</a></h2>
+							<h2><a href="Touring-Scotford-Solar-Farm.html">Touring Scotford Solar Farm, Canada's largest
+									"behind the meter" solar project.</a></h2>
 							<p>TAGS: nature projects; solar; renewable energy design </p>
 						</header>
 						<h3>Why I Did This</h3>
@@ -830,13 +831,179 @@
 							site (no grid supplying). Aside from getting the opportunity to see a giant ~58MW solar farm
 							(which I
 							have not done before), it was also an opportunity to see what challenges and solutions were
-							present for such a unique project.</p>
+							present for such a unique project.
 						</p>
 
 						<span class="image featured"><img
 								src="articleAssets\Touring-Scotford-Solar-Farm\solar-panels-cbc.jpg" alt="" /></span>
-								
+
 					</article>
+
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="Windowsill-Aeroponics-Tower.html">Utilizing Window Space With An Aeroponics
+									Tower</a></h2>
+							<p>TAGS: electronics; nature projects; aeroponics; hydroponics; garden; tower; water pumps
+							</p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>I’m grow greens in my hydroponics bin on a desk near my window, but the hydroponics box
+							doesn’t hug the window as much as I like (it doesn’t utilize the available window space). I
+							learned about these aeroponics towers and love the idea that they can be freely 3D printed
+							and they utilize cramped spaces (perfect for urban farming). This also can be a good trial
+							test for finding info for my university club’s greenhouse (to possibly utilize space in
+							there).
+						</p>
+						<span class="image featured"><img
+								src="articleAssets\Windowsill-Aeroponics-Tower\aero_tower_1.jpg" alt="" /></span>
+					</article>
+
+
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="Unbricking-My-Android-TV-Box.html">Nightmare electronics: Hard bricking my
+									Android TV box then spending days to finally get it re-flashed alive.</a></h2>
+							<p>TAGS: electronics; software; Linux Armbian Debian; RK3318 Android TV box; un-bricking; factory firmware flashing; maskrom boot mode;
+							</p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>							
+							I had an Android TV box that was previously used to turn my old TV into a smart TV (with
+							internet access and external hard drive access), but I had bought a cheap TV that had smart
+							capabilities, and this box was slow and always ran hot, so it was pretty much useless as is.
+							I wanted to see if I could test my electronics skills by repurposing this android box with
+							something new. I found online that some people built a Linux distro specifically for these
+							ARM based systems, called Armbian (based on Debian), and, further, made a sub-distro for
+							these Android TV boxes, called RK3318 Box (the chipset that I have).<br><br>
+							I was able to install the system quite easily following the tutorial, and it dramatically
+							reduced the temperature of the chip (before it was scalding hot), but I wanted to see if I
+							could then install a Lakka gaming OS firmware; but something went wrong with the install and
+							my box became totally unresponsive (bricked). I spent the next few days going over tutorials
+							and forums of people who have unbricked these before by using factory firmware tools (with
+							an unconventional USB A male to male cord), and grounding some of the board’s terminals, in
+							order to get the board into maskrom mode, in which then its able to be communicated with and
+							flashed with factory firmware. The factory firmware then allows a jumping point for which I
+							can then flash the system via USB sticks of preload firmware of custom Linux
+							software.<br><br>
+							With a lot of patience, I finally got it to connect and flash, after which I pledged to not
+							attempt that Lakka install again, but instead try something else.
+						</p>
+						<span class="image featured"><img
+								src="articleAssets\Unbricking-My-Android-TV-Box\unbrick_1.jpg" alt="" /></span>
+					</article>
+
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="Trying-USB-Based-Linux-Porteus.html">Trying a Linux distro, located fully on a USB, called Porteus</a></h2>
+							<p>TAGS: software; Linux Porteus; USB operating system
+							</p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>							
+							I recently learned about Linux distros that be held on small USB sticks so that you can boot
+							them from most computers (through the BIOS boot menus), and I wanted to try them out. They
+							are small sized packages (like half a gig, so they can fit on even the really cheap small
+							USBs), and they have the ability to save things to their USB storage.
+						</p>
+						<span class="image featured"><img
+								src="articleAssets\Trying-USB-Based-Linux-Porteus\porteus_1.jpg" alt="" /></span>
+					</article>
+
+
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="Trying-An-Internet-Radio-Server.html">Trying An Internet Radio Server Called Icecast</a></h2>
+							<p>TAGS: software; Linux Ubuntu; Icecast radio server; Mixx DJ software
+							</p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>							
+							On a previous test, I had repurposed my old PC into something new (and hopefully useful); I
+							could only manage to get Ubuntu installed which seem to make the system run relatively well
+							(but not fast). I wanted to extend the repurposing of the PC, and build some experience with
+							Linux servers by trying to make an internet radio server on the PC. I heard about Icecast, a
+							free internet server system, so decided to install it and use free Mixx DJ software to
+							broadcast music (I could also just copy songs to a folder readable by Icecast but I just
+							chose this route).
+						</p>
+						<span class="image featured"><img
+								src="articleAssets\Trying-An-Internet-Radio-Server\internet_radio_1.jpg" alt="" /></span>
+					</article>
+
+
+
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="Repurposing-An-Old-PC-Into-Media-Server.html">Repurposing An Old PC Into A Media Server</a></h2>
+							<p>TAGS: software; operating system OS; TrueNAS; OpenMediaVault; Docker; Linux Ubuntu with
+								Jellyfin
+							</p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>							
+							I had an old (really old Windows Vista) PC that was collecting dust, so I wanted to see if I
+							could use it as a NAS storage server (just to increase my knowledge of it), or something
+							else like a Linux distro.
+						</p>
+						<span class="image featured"><img
+								src="articleAssets\Repurposing-An-Old-PC-Into-Media-Server\repurpose_old_PC_1.jpg" alt="" /></span>
+					</article>
+
+
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="Converting-Android-TV-Box-Into-Armbian-NAS-Server.html">Converting my Android TV box into a Linux distro Armbian, then using it for a
+								OpenMediaVault NAS Server</a></h2>
+							<p>TAGS: electronics; software; NAS network attached storage server; Android TV box; Linux distro Armbian; OpenMediaVault
+							</p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>							
+							In a previous experience I had converted my useless Android TV box (used to make TVs into
+							pseudo-Smart TVs) into a Linux distro Armbian. The RK3318 Armbian distro could also download
+							an ‘armbian-config’ library package that allows quick integration of third part software
+							(from a predefined list), so I wanted to see what I could install to make use of the box.
+						</p>
+						<span class="image featured"><img
+								src="articleAssets\Converting-Android-TV-Box-Into-Armbian-NAS-Server\armbian_NAS_1.jpg" alt="" /></span>
+					</article>
+
 
 
 				</div>
