--- a/featured.html
+++ b/featured.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <!--
 	Arcana by HTML5 UP
@@ -318,7 +317,49 @@
 							the app). We also followed a sprint team review style when setting project goals.
 						</p>
 						<span class="image featured"><img
-								src="articleAssets\Unity-UAlberta-AR-App-Dev\Unity-UAlberta-AR_2.jpg" alt=""  style="margin-left:auto; margin-right:auto; width:400px;" /></span>
+								src="articleAssets\Unity-UAlberta-AR-App-Dev\Unity-UAlberta-AR_2.jpg" alt=""
+								style="margin-left:auto; margin-right:auto; width:400px;" /></span>
+					</article>
+
+
+					<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="Unbricking-My-Android-TV-Box.html">Nightmare electronics: Hard bricking my
+									Android TV box then spending days to finally get it re-flashed alive.</a></h2>
+							<p>TAGS: electronics; software; Linux Armbian Debian; RK3318 Android TV box; un-bricking;
+								factory firmware flashing; maskrom boot mode;
+							</p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>
+							I had an Android TV box that was previously used to turn my old TV into a smart TV (with
+							internet access and external hard drive access), but I had bought a cheap TV that had smart
+							capabilities, and this box was slow and always ran hot, so it was pretty much useless as is.
+							I wanted to see if I could test my electronics skills by repurposing this android box with
+							something new. I found online that some people built a Linux distro specifically for these
+							ARM based systems, called Armbian (based on Debian), and, further, made a sub-distro for
+							these Android TV boxes, called RK3318 Box (the chipset that I have).<br><br>
+							I was able to install the system quite easily following the tutorial, and it dramatically
+							reduced the temperature of the chip (before it was scalding hot), but I wanted to see if I
+							could then install a Lakka gaming OS firmware; but something went wrong with the install and
+							my box became totally unresponsive (bricked). I spent the next few days going over tutorials
+							and forums of people who have unbricked these before by using factory firmware tools (with
+							an unconventional USB A male to male cord), and grounding some of the board’s terminals, in
+							order to get the board into maskrom mode, in which then its able to be communicated with and
+							flashed with factory firmware. The factory firmware then allows a jumping point for which I
+							can then flash the system via USB sticks of preload firmware of custom Linux
+							software.<br><br>
+							With a lot of patience, I finally got it to connect and flash, after which I pledged to not
+							attempt that Lakka install again, but instead try something else.
+						</p>
+						<span class="image featured"><img src="articleAssets\Unbricking-My-Android-TV-Box\unbrick_1.jpg"
+								alt="" /></span>
 					</article>
 
 
@@ -430,24 +471,24 @@
 			</div>
 
 
-      <!-- Copyright -->
-      <div class="copyright">
-        <ul class="menu">
-          <li>&copy; Brandon Hoynick. All rights reserved.</li>
-          <li>
-            Webpage Template from:
-            <a href="https://html5up.net" target="_blank">HTML5 UP</a>
-          </li>
-          <li>
-            Free photos from:
-            <a href="https://unsplash.com/" target="_blank">Unsplash</a>
-          </li>
-          <li>
-          Free videos from:
-          <a href="https://pixabay.com/" target="_blank">Pixabay</a>
-          </li>
-        </ul>
-      </div>
+			<!-- Copyright -->
+			<div class="copyright">
+				<ul class="menu">
+					<li>&copy; Brandon Hoynick. All rights reserved.</li>
+					<li>
+						Webpage Template from:
+						<a href="https://html5up.net" target="_blank">HTML5 UP</a>
+					</li>
+					<li>
+						Free photos from:
+						<a href="https://unsplash.com/" target="_blank">Unsplash</a>
+					</li>
+					<li>
+						Free videos from:
+						<a href="https://pixabay.com/" target="_blank">Pixabay</a>
+					</li>
+				</ul>
+			</div>
 
 		</div>
 
