--- a/featured.html
+++ b/featured.html
@@ -341,7 +341,7 @@
 							I had an Android TV box that was previously used to turn my old TV into a smart TV (with
 							internet access and external hard drive access), but I had bought a cheap TV that had smart
 							capabilities, and this box was slow and always ran hot, so it was pretty much useless as is.
-							I wanted to see if I could test my electronics skills by repurposing this android box with
+							I wanted to see if I could test my electronics skills by repurposing this Android box with
 							something new. I found online that some people built a Linux distro specifically for these
 							ARM based systems, called Armbian (based on Debian), and, further, made a sub-distro for
 							these Android TV boxes, called RK3318 Box (the chipset that I have).<br><br>
