--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
             <p>Humidity: <span id="humidity">Loading...</span></p>
             <p>Barometric Pressure: <span id="baro_pressure">Loading...</span></p>
           </div>
-          <div class="center">
+          <!-- <div class="center">
             <span class="image-profile"><img src="images/profile_photo.png" alt="" /></span>
-          </div>
+          </div> -->
+          <img src="images/profile_photo.png" style="max-width: 100%; height: auto;">
           <div class="row">
             <h2>
               I'm an inquisitive Computer / Software Engineer eager to learn more
