--- a/index.html
+++ b/index.html
@@ -60,12 +60,6 @@
     <section class="wrapper style2">
       <div class="container">
         <header class="major">
-          <div class="center">
-            <p>Greenhouse Values (*testing API for a greenhouse data set)</p>
-            <p>Temperature: <span id="temperature">Loading...</span></p>
-            <p>Humidity: <span id="humidity">Loading...</span></p>
-            <p>Barometric Pressure: <span id="baro_pressure">Loading...</span></p>
-          </div>
           <!-- <div class="center">
             <span class="image-profile"><img src="images/profile_photo.png" alt="" /></span>
           </div> -->
@@ -106,36 +100,44 @@
     <section class="wrapper style2">
       <div class="container">
         <!-- <header class="major"> -->
-          <p>
-            I also have experience with additional tools / concepts, like:<br>
-            - Full Class 5 Alberta Driver's License (No conditions; non-GDL); no law infractions; own my own vehicle.<br>
-            - Safety data systems (MSDS / SDS / chemical safety concepts).<br>
-            - Safety equipment (PPE usage is important, and typical usage is hard set into my mind from doing my
-            previous industrial work; this includes eyewear, ear protection, hard toe footwear, job specific gloves,
-            hardhats, respiratory protection, clothing guards, etc.).<br>
-            - 3D printers (Prusa MK3S; Big Builder).<br>
-            - 3D modeling (previously SolidWorks, now Fusion360).<br>
-            - Windows computers (I am most familiar with their operating systems as I’ve been using them most of my
-            life).<br>
-            - Computer hardware internals (I built my own gaming desktop PC from individual parts and installed all drivers and
-            the OS).<br>
-            - Oscilloscopes and wave generators (at basic level, not 'advanced' Keysight ones).<br>
-            - Multimeters.<br>
-            - Soldering stations.<br>
-            - DC bench adjustable power supplies.<br>
-            - Appliance / instrument tinkering (not an expert at all, just saying I'm not afraid to delve into
-            appliances if they are experiencing issues).<br>
-            - Power tools (not regular user, just saying I'm not afraid to use them and am conscious about how to use
-            them, or, if unfamiliar, then learn about how to use them).<br>
-            - Residential live wire systems (*not certified as Electrician, just saying I understand the basics of 120V
-            residential power systems and am not afraid to delve in projects involving them).<br>
-            - Compression-ferrule fittings (Swagelok), NPS, NPT piping systems (for air, inert gas, and flammable gas).<br>
-            - Residential natural gas systems (*not certified as Natural Gas Pipe Installer, just saying I understand
-            the basics of gas piping systems and am not afraid to delve in projects involving them; though I will say my
-            old career had me working with 2000psi hydrogen piping systems, so I do know a thing or two about
-            high-pressure flammable systems).<br>
-          </p>
+        <p>
+          I also have experience with additional tools / concepts, like:<br>
+          - Full Class 5 Alberta Driver's License (No conditions; non-GDL); no law infractions; own my own vehicle.<br>
+          - Safety data systems (MSDS / SDS / chemical safety concepts).<br>
+          - Safety equipment (PPE usage is important, and typical usage is hard set into my mind from doing my
+          previous industrial work; this includes eyewear, ear protection, hard toe footwear, job specific gloves,
+          hardhats, respiratory protection, clothing guards, etc.).<br>
+          - 3D printers (Prusa MK3S; Big Builder).<br>
+          - 3D modeling (previously SolidWorks, now Fusion360).<br>
+          - Windows computers (I am most familiar with their operating systems as I’ve been using them most of my
+          life).<br>
+          - Computer hardware internals (I built my own gaming desktop PC from individual parts and installed all
+          drivers and
+          the OS).<br>
+          - Oscilloscopes and wave generators (at basic level, not 'advanced' Keysight ones).<br>
+          - Multimeters.<br>
+          - Soldering stations.<br>
+          - DC bench adjustable power supplies.<br>
+          - Appliance / instrument tinkering (not an expert at all, just saying I'm not afraid to delve into
+          appliances if they are experiencing issues).<br>
+          - Power tools (not regular user, just saying I'm not afraid to use them and am conscious about how to use
+          them, or, if unfamiliar, then learn about how to use them).<br>
+          - Residential live wire systems (*not certified as Electrician, just saying I understand the basics of 120V
+          residential power systems and am not afraid to delve in projects involving them).<br>
+          - Compression-ferrule fittings (Swagelok), NPS, NPT piping systems (for air, inert gas, and flammable
+          gas).<br>
+          - Residential natural gas systems (*not certified as Natural Gas Pipe Installer, just saying I understand
+          the basics of gas piping systems and am not afraid to delve in projects involving them; though I will say my
+          old career had me working with 2000psi hydrogen piping systems, so I do know a thing or two about
+          high-pressure flammable systems).<br>
+        </p>
         <!-- </header> -->
+      </div>
+      <div class="center">
+        <p>Greenhouse Values (*testing API for a greenhouse data set)</p>
+        <p>Temperature: <span id="temperature">Loading...</span></p>
+        <p>Humidity: <span id="humidity">Loading...</span></p>
+        <p>Barometric Pressure: <span id="baro_pressure">Loading...</span></p>
       </div>
     </section>
 
