--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <img src="images/profile_photo.png" style="max-width: 100%; height: auto;">
           <div class="row">
             <h2>
-              I'm an inquisitive Computer / Software Engineer eager to learn more
+              I'm an inquisitive Software / Computer Engineer eager to learn more
               about the technology our of time.
             </h2>
           </div>
@@ -134,10 +134,21 @@
         <!-- </header> -->
       </div>
       <div class="center">
-        <p>Greenhouse Values (*testing API for a greenhouse data set)</p>
-        <p>Temperature: <span id="temperature">Loading...</span></p>
-        <p>Humidity: <span id="humidity">Loading...</span></p>
-        <p>Barometric Pressure: <span id="baro_pressure">Loading...</span></p>
+        <p>More information about my university engineering program:<br>
+          <a href="https://www.ualberta.ca/undergraduate-programs/bachelor-of-science-in-computer-engineering-software-option-co-operative-computer-engineering---software.html"
+            target="_blank">UAlberta Undergraduate Engineering Program: Computer Engineering - Software Option</a> <br>
+          <a href="https://www.ualberta.ca/undergraduate-programs/bachelor-of-science-in-computer-engineering-computer-engineering.html"
+            target="_blank">UAlberta Undergraduate Engineering
+            Program: Computer Engineering</a>
+        </p>
+      </div>
+      <div class="center">
+        <p>
+          Greenhouse Values (*testing data capture of greenhouse sensors)<br>
+          Temperature: <span id="temperature">Loading...</span><br>
+          Humidity: <span id="humidity">Loading...</span><br>
+          Barometric Pressure: <span id="baro_pressure">Loading...</span><br>
+        </p>
       </div>
     </section>
 
