--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             like instruments, robotics, radio/wireless communications, 3D models, games, computer simulations.<br><br>
 
 
-            I also love thinking aboout technology in nature and sustainbility concepts like Earth ships (self
+            I also love thinking about technology in nature and sustainability concepts like Earth ships (self
             sustaining homes), renewable designs, and low/free power projects.<br><br>
 
 
