--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             Additionally, my previous work experience was as a 3rd Class Power Engineer and a
             Chemical Engineering Technologist involving industrial
             plant operations, small research pilot chemical plants, research lab
-            environments, and 3D modeling (SolidWorks) and 3D printing.
+            environments, and 3D modeling (Fusion360, SolidWorks) and 3D printing.
           </p>
         </header>
       </div>
