--- a/index.html
+++ b/index.html
@@ -56,6 +56,35 @@
       </nav>
     </div>
 
+        <!-- Main pages (since mobile puts them in hamburger menu, this set of links is more open) -->
+        <section class="wrapper style1">
+          <div class="container">
+            <div class="row gtr-200">
+              <section class="col-4 col-12-narrower">
+                <div class="box highlight">
+                  <i class="icon solid major fa-home"></i>
+                  <h3>Home Page</a></h3>
+                  <p>Let's go to the start page. <br> </p>
+                </div>
+              </section>
+              <section class="col-4 col-12-narrower">
+                <div class="box highlight">
+                  <i class="icon solid major fa-star"></i>
+                  <h3><a href="featured.html">Featured Articles</a></h3>
+                  <p>Let's see what I've experienced lately. <br> </p>
+                </div>
+              </section>
+              <section class="col-4 col-12-narrower">
+                <div class="box highlight">
+                  <i class="icon solid major fa-warehouse"></i>
+                  <h3><a href="archived.html">Archived Articles</a></h3>
+                  <p>Let's see ALL of what I've experienced. <br> </p>
+                </div>
+              </section>
+            </div>
+          </div>
+        </section>
+
     <!-- Gigantic Heading -->
     <section class="wrapper style2">
       <div class="container">
@@ -71,18 +100,21 @@
             </h2>
           </div>
           <p>
-            I enjoy most flavors of engineering, but my passion is across the electrical, computer, and mechanical
+            I enjoy most flavors of engineering, but my favourites are across the electrical, computer, and mechanical
             areas. I
             greatly enjoy learning/tinkering with electronic and software systems
-            like instruments, robotics, radio/wireless communications, 3D models, games, computer simulations.<br><br>
+            like: instruments, embedded electronics, servers, computer simulations / games.<br><br>
 
+            My current passion is to learn about the multitude of popular and needed technologies across the various
+            areas of computer engineering/science. I hope that the breadth of knowledge gained may allow me to find what
+            frameworks are useful, needed in long term, and enjoyable to use; this might be a futile effort since
+            technology frameworks are updating all the time, but I hope at least this effort demonstrates my versatility
+            and self-motivation for learning about software/computer technology.<br><br>
 
             I also love thinking about technology in nature and sustainability concepts like Earth ships (self
             sustaining homes), renewable designs, and low/free power projects.<br><br>
 
-
-            Additionally, my previous work experience was as a 3rd Class Power Engineer and a
-            Chemical Engineering Technologist involving industrial
+            Additionally, my previous work experience was as a 3rd Class Power Engineer involving industrial
             plant operations, small research pilot chemical plants, research lab
             environments, and 3D modeling (Fusion360, SolidWorks) and 3D printing.
           </p>
@@ -107,6 +139,7 @@
           - Safety equipment (PPE usage is important, and typical usage is hard set into my mind from doing my
           previous industrial work; this includes eyewear, ear protection, hard toe footwear, job specific gloves,
           hardhats, respiratory protection, clothing guards, etc.).<br>
+          - Industrial management systems (like ExxonMobil's Operations Integrity Management System) and their encompassing values (like information protocols, safety protocols).<br>
           - 3D printers (Prusa MK3S; Big Builder).<br>
           - 3D modeling (previously SolidWorks, now Fusion360).<br>
           - Windows computers (I am most familiar with their operating systems as I’ve been using them most of my
